crmeb_java/crmeb/deploy/k8s/base/admin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: crmeb-admin
  namespace: crmeb
spec:
  selector:
    app: crmeb-admin
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 20500
  type: ClusterIP
